Made the mobile version fully scalable

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
     </nav>
 
     <div id="waitingList">
-      <p>Waiting List</p>
-      <i id="info" class="questionIcon"
-        ><img src="./img/icons/question-mark.svg" alt=""
-      /></i>
-      <i id="refresh" class="refreshIcon"
-        ><img src="./img/icons/refresh.svg" alt=""
-      /></i>
+      <div class="waitingList">
+        <p>Waiting List</p>
+        <i id="info" class="questionIcon"
+          ><img src="./img/icons/question-mark.svg" alt=""
+        /></i>
+        <i id="refresh" class="refreshIcon"
+          ><img src="./img/icons/refresh.svg" alt=""
+        /></i>
+      </div>
     </div>
 
     <main id="mainBorder">
@@ -91,18 +93,20 @@
       </div>
     </main>
 
-    <div class="display">
-      <div class="backgroundWhite bgWhiteSize-142">
-        <p>Show other info</p>
-      </div>
+    <div class="displayContainer">
+      <div class="display">
+        <div class="backgroundWhite bgWhiteSize-142">
+          <p>Show other info</p>
+        </div>
 
-      <div class="backgroundWhite bgWhiteSize-50">
-        <img
-          id="hideButton"
-          class="noRotate"
-          src="./img/icons/triangle.svg"
-          alt=""
-        />
+        <div class="backgroundWhite bgWhiteSize-50">
+          <img
+            id="hideButton"
+            class="noRotate"
+            src="./img/icons/triangle.svg"
+            alt=""
+          />
+        </div>
       </div>
     </div>
 
