Completed the mobile version

--- a/index.html
+++ b/index.html
@@ -35,12 +35,23 @@
     </div>
 
     <main id="mainBorder">
+
+      <article id="announcement" class="">
+        <h4 style="text-align: center;">Court opening hours will change!</h4>
+        <div id="announcementDate">
+          <p id="datePosted">11.Dec.22</p>
+          <p id="datePostedHours">11:20 <span>pm</span></p>
+        </div>
+        <p class="announcementBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel molestias fuga sit perspiciatis illo, alias et exercitationem eveniet ex voluptatem quis laborum repellat ut odio minus, ratione omnis laudantium totam?</p>
+      </article>
+
       <div id="mainBorderTop">
         <p>Players</p>
         <p>Waiting Time</p>
       </div>
 
-      <div class="dark mainPlayerList border-top">
+    <section id="addedPlayers">
+      <div class="dark border-top mainPlayerList">
         <div class="leftPlayers">
           <p>Lynn Tanner</p>
           <p>Roderick Flich</p>
@@ -66,7 +77,7 @@
         <i class="trashCan"><img src="./img/icons/trash-can.svg" alt="" /></i>
       </div>
 
-      <div class="border-top dark mainPlayerList">
+      <div class="dark border-top mainPlayerList">
         <div class="leftPlayers bold">
           <p><b>Thomas Magnum</b></p>
           <p><b>Roderick Decker</b></p>
@@ -79,7 +90,7 @@
         <i class="trashCan"><img src="./img/icons/trash-can.svg" alt="" /></i>
       </div>
 
-      <div class="border-top mainPlayerList dark">
+      <div class="dark border-top mainPlayerList">
         <div class="leftPlayers">
           <p>Angus MacGyver</p>
           <p>Hannibal Smith</p>
@@ -96,7 +107,7 @@
     <div class="displayContainer">
       <div class="display">
         <div class="backgroundWhite bgWhiteSize-142">
-          <p>Show other info</p>
+          <p id="showOtherInfo">Show other info</p>
         </div>
 
         <div class="backgroundWhite bgWhiteSize-50">
@@ -127,6 +138,7 @@
         <img class="courtItems selected" src="./img/icons/court.svg" alt="" />
         <img class="courtItems selected" src="./img/icons/court.svg" alt="" />
       </div>
+    </section>
     </div>
 
     <button id="addMe"><p>Add me</p></button>
