--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     />
   </head>
   <body>
+    <nav class="desktopTitles">
+      <p>Waiting List</p>
+      <p>Announcement</p>
+    </nav>
     <nav id="navbar">
       <img class="leftLogo" src="./img/icons/360.svg" alt="" />
       <select class="ui dropdown">
@@ -21,7 +25,6 @@
       </select>
       <img class="rightLogo" src="./img/profile_picture.png" alt="" />
     </nav>
-
     <div id="waitingList">
       <div class="waitingList">
         <p>Waiting List</p>
@@ -33,10 +36,9 @@
         /></i>
       </div>
     </div>
-
-    <main id="mainBorder">
-
-      <article id="announcement" class="">
+<div id="desktopContainer">
+    <main id="mainBorder" class="desktopLeftSide">
+      <article id="announcement" class="hide">
         <h4 style="text-align: center;">Court opening hours will change!</h4>
         <div id="announcementDate">
           <p id="datePosted">11.Dec.22</p>
@@ -49,9 +51,19 @@
         <p>Players</p>
         <p>Waiting Time</p>
       </div>
+      <div id="mainBorderTopDesktop">
+        <p class="desktopGameText">Game<br>Type</p>
+        <p class="desktopGameText">Game<br> Rating</p>
+        <p class="desktopGameText"><br>Players</p>
+        <p id="waitingTimeText"><br>Waiting Time</p>
+      </div>
 
     <section id="addedPlayers">
       <div class="dark border-top mainPlayerList">
+        <div class="gameType"><img src="./img/icons/rackettwo.svg" alt=""></div>
+        <div class="gameRating">
+          3.5
+        </div>
         <div class="leftPlayers">
           <p>Lynn Tanner</p>
           <p>Roderick Flich</p>
@@ -65,6 +77,10 @@
       </div>
 
       <div class="dark border-top mainPlayerList">
+        <div class="gameType"><img src="./img/icons/rackettwo.svg" alt=""></div>
+        <div class="gameRating">
+          3.5
+        </div>
         <div class="leftPlayers">
           <p>Angus MacGyver</p>
           <p>Hannibal Smith</p>
@@ -78,6 +94,10 @@
       </div>
 
       <div class="dark border-top mainPlayerList">
+        <div class="gameType"><img src="./img/icons/rackettwo.svg" alt=""></div>
+        <div class="gameRating">
+          <img src="./img/icons/Handshake.svg" alt="">
+        </div>
         <div class="leftPlayers bold">
           <p><b>Thomas Magnum</b></p>
           <p><b>Roderick Decker</b></p>
@@ -91,6 +111,10 @@
       </div>
 
       <div class="dark border-top mainPlayerList">
+        <div class="gameType"><img src="./img/icons/rackettwo.svg" alt=""></div>
+        <div class="gameRating">
+          3.5
+        </div>
         <div class="leftPlayers">
           <p>Angus MacGyver</p>
           <p>Hannibal Smith</p>
@@ -103,6 +127,10 @@
         <i class="trashCan"><img src="./img/icons/trash-can.svg" alt="" /></i>
       </div>
     </main>
+
+
+
+  <div class="desktopRightSide">
 
     <div class="displayContainer">
       <div class="display">
@@ -122,26 +150,96 @@
     </div>
 
     <div id="courtMenu" class="topPadding">
+
       <div class="compass">
-        <img class="courtItems" src="./img/icons/Compass.svg" alt="" />
+        <img src="./img/icons/Compass.svg" alt="" />
       </div>
+
+      <article class="desktopAnnouncement">
+        <h4 style="text-align: center;">Court opening hours will change!</h4>
+        <div id="announcementDate">
+          <p id="datePosted">11.Dec.22</p>
+          <p id="datePostedHours">11:20 <span>pm</span></p>
+        </div>
+        <p class="announcementBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel molestias fuga sit perspiciatis illo, alias et exercitationem eveniet ex voluptatem quis laborum repellat ut odio minus, ratione omnis laudantium totam?</p>
+      </article>
+
+      <h3 class="desktopTitles extraMargin">Courts</h3>
       <div class="court">
+        <div class="courtsContent">
+          <p>Roderick D.</p>
+          <p>Devon M.</p>
+          <figcaption>12 min.</figcaption>
+          <p>Rick W.</p>
+          <p>Dori D.</p>
+        </div>
         <img class="courtItems" src="./img/icons/court.svg" alt="" />
+        <div class="courtsContent">
+          <p>Roderick D.</p>
+          <p>Devon M.</p>
+          <figcaption>12 min.</figcaption>
+          <p>Rick W.</p>
+          <p>Dori D.</p>
+        </div>
         <img class="courtItems" src="./img/icons/court.svg" alt="" />
+        <div class="courtsContent">
+          <p>Roderick D.</p>
+          <p>Devon M.</p>
+          <figcaption>12 min.</figcaption>
+          <p>Rick W.</p>
+          <p>Dori D.</p>
+        </div>
         <img class="courtItems" src="./img/icons/court.svg" alt="" />
+        <div class="courtsContent">
+          <p>Roderick D.</p>
+          <p>Devon M.</p>
+          <figcaption>12 min.</figcaption>
+          <p>Rick W.</p>
+          <p>Dori D.</p>
+        </div>
         <img class="courtItems" src="./img/icons/court.svg" alt="" />
       </div>
 
       <div class="court">
+        <div class="courtsContent">
+          <p>Roderick D.</p>
+          <p>Devon M.</p>
+          <figcaption>12 min.</figcaption>
+          <p>Rick W.</p>
+          <p>Dori D.</p>
+        </div>
         <img class="courtItems" src="./img/icons/court.svg" alt="" />
+        <div class="courtsContent">
+          <p>Roderick D.</p>
+          <p>Devon M.</p>
+          <figcaption>12 min.</figcaption>
+          <p>Rick W.</p>
+          <p>Dori D.</p>
+        </div>
         <img class="courtItems" src="./img/icons/court.svg" alt="" />
+        <div class="courtsContent selected">
+          <p>Roderick D.</p>
+          <p>Devon M.</p>
+          <figcaption>12 min.</figcaption>
+          <p>Rick W.</p>
+          <p>Dori D.</p>
+        </div>
         <img class="courtItems selected" src="./img/icons/court.svg" alt="" />
+        <div class="courtsContent selected">
+          <p>Roderick D.</p>
+          <p>Devon M.</p>
+          <figcaption>12 min.</figcaption>
+          <p>Rick W.</p>
+          <p>Dori D.</p>
+        </div>
         <img class="courtItems selected" src="./img/icons/court.svg" alt="" />
       </div>
     </section>
     </div>
 
     <button id="addMe"><p>Add me</p></button>
+  </div>
+</div>
     <script src="App.js"></script>
   </body>
 </html>
